--- a/templates/conventions/selection_from_zero.html
+++ b/templates/conventions/selection_from_zero.html
@@ -5,19 +5,7 @@
 {% block page_title %}Selection - APiLos{% endblock%}
 
 {% block javascript_extras %}
-    <script src="{% static "virtual-select/dist/virtual-select.min.js" %}" nonce="{{request.csp_nonce}}"></script>
-    <script type="text/javascript" nonce="{{request.csp_nonce}}">
-        document.addEventListener('DOMContentLoaded', function () {
-            VirtualSelect.init({
-                ele: '#id_bailleur',
-                multiple: false,
-                hideClearButton: true,
-                search: true,
-                searchPlaceholderText: "Rechercher votre bailleur..."
-            });
-            console.log("Ici");
-        });
-    </script>
+    {% include "common/form/select_bailleur.html" %}
 {% endblock %}
 
 {% block css_extras %}
