--- a/templates/conventions/post_action.html
+++ b/templates/conventions/post_action.html
@@ -57,7 +57,7 @@
             </div>
             <hr>
             <div class="fr-col-12">
-                <div class="fr-mb-2w fr-pt-2w block--row-strech">
+                <div class="fr-mb-2w block--row-strech">
                     <div class="block--row-strech-1 fr-my-2w">
                         <p class="fr-alert__title">
                             Générer la fiche CAF
@@ -68,7 +68,7 @@
                     </div>
                     <form action="{% url 'conventions:fiche_caf' convention_uuid=convention.uuid %}">
                         {% csrf_token %}
-                        <button class="fr-btn fr-my-1w fr-btn--secondary fr-my-1w fr-icon-download-line fr-btn--icon-left">
+                        <button class="fr-btn fr-btn--secondary fr-my-1w fr-icon-download-line fr-btn--icon-left">
                             Générer la fiche CAF
                         </button>
                     </form>
@@ -77,7 +77,7 @@
             {% if request|is_instructeur %}
                 <hr>
                 <div class="fr-col-12">
-                    <div class="fr-mb-2w fr-pt-2w block--row-strech">
+                    <div class="fr-mb-2w block--row-strech">
                         <div class="block--row-strech-1 fr-my-2w">
                             <p class="fr-alert__title">
                                 Téléverser à nouveau la convention
@@ -96,7 +96,7 @@
                                 accept="application/pdf">
                             <div class="block--row-strech">
                                 <div>
-                                    <button id="{{upform.file.id_for_label}}_upload_button" class="fr-icon-upload-line fr-btn--icon-left fr-btn fr-my-1w fr-btn--secondary fr-my-1w" type="button">
+                                    <button id="{{upform.file.id_for_label}}_upload_button" class="fr-icon-upload-line fr-btn--icon-left fr-btn fr-btn--secondary fr-my-1w" type="button">
                                         Téléverser la convention signée
                                     </button>
                                     {% for error in upform.file.errors %}
@@ -125,29 +125,11 @@
                 </div>
                 <hr>
                 <div class="fr-col-12">
-                    <div class="fr-mb-2w">
+                    <div class="fr-mb-5w fr-pt-2w">
                         <p class="fr-alert__title">
                             Date de signature
                         </p>
-                        <div class="fr-col-12 fr-my-2w block--row-strech">
-                            <div class="block--row-strech-1 fr-mr-6w">
-
-                                <p>
-                                    Votre convention a été signée le {{convention.televersement_convention_signee_le|date:"d F Y"|default_if_none:'-'}}.
-                                </p>
-                                <p>
-                                    Ce n'est pas la bonne date ? Vous pouvez la mettre à jour.
-                                </p>
-                            </div>
-                            <details>
-                                <summary>
-                                    <div class="fr-btn fr-my-1w fr-btn--secondary fr-my-1w">Mettre à jour la date de signature</div>
-                                </summary>
-                                {% include "conventions/actions/update_date_signature.html" %}
-                                <div>Mettre à jour la date</div>
-
-                            </details>
-                        </div>
+                        {% include "conventions/actions/update_date_signature.html" %}
                     </div>
                 </div>
             {% endif %}
@@ -162,7 +144,7 @@
             <div class="fr-col-12">
                 {% if request|is_instructeur %}
                     <hr>
-                    <div class="fr-mb-5w fr-pt-2w">
+                    <div class="fr-mb-5w">
                         <div class="fr-my-2w">
                             <p class="fr-alert__title">
                                 Résiliation/dénonciation de la convention
