Add title to the embedded iframe

--- a/templates/stats/index.html
+++ b/templates/stats/index.html
@@ -10,5 +10,6 @@
         frameborder="0"
         width="100%"
         height="1300"
+        title="Tableau de bord statistique - Metabase"
     ></iframe>
 {% endblock %}
