--- a/templates/conventions/bailleur.html
+++ b/templates/conventions/bailleur.html
@@ -88,6 +88,8 @@
                             </div>
                         </div>
 
+                        {% include "common/form/input_textarea.html" with form_input=form.signataire_bloc_signature object_field="bailleur__signataire_bloc_signature__"|add:form.uuid.value %}
+
                         {% if convention.programme.is_foyer or convention.programme.is_residence %}
                             <h4>Gestionnaire des logments conventionnés</h4>
                             {% with convention_uuid=convention.uuid|slugify %}
@@ -106,11 +108,11 @@
                                         </div>
                                     </div>
                                 </div>
+
+                                {% include "common/form/input_textarea.html" with form_input=form.gestionnaire_signataire_bloc_signature object_field="convention__gestionnaire_signataire_bloc_signature__"|add:convention_uuid %}
+
                             {% endwith %}
-
                         {% endif %}
-
-
                     </div>
                 </div>
                 {% include "common/required_fields_info.html" %}
