--- a/templates/conventions/recapitulatif/bailleur.html
+++ b/templates/conventions/recapitulatif/bailleur.html
@@ -41,6 +41,7 @@
                                     {% include "common/display_field_if_exists.html" with value=convention.signataire_nom object_field="bailleur__signataire_nom__"|add:bailleur_uuid %}
                                     <em>{% include "common/display_field_if_exists.html" with value=convention.signataire_fonction object_field="bailleur__signataire_fonction__"|add:bailleur_uuid %}</em>
                                     {% include "common/display_field_if_exists.html" with label="Date de délibération" value=convention.signataire_date_deliberation object_field="bailleur__signataire_date_deliberation__"|add:bailleur_uuid %}
+                                    {% include "common/display_field_if_exists.html" with value=convention.signataire_bloc_signature object_field="bailleur__signataire_bloc_signature__"|add:bailleur_uuid %}
                                 </div>
                             </div>
                         </div>
@@ -66,6 +67,7 @@
                                         {% include "common/display_field_if_exists.html" with value=convention.gestionnaire_signataire_nom object_field="convention__gestionnaire_signataire_nom__"|add:convention_uuid %}
                                         <em>{% include "common/display_field_if_exists.html" with value=convention.gestionnaire_signataire_fonction object_field="convention__gestionnaire_signataire_fonction__"|add:convention_uuid %}</em>
                                         {% include "common/display_field_if_exists.html" with label="Date de délibération" value=convention.gestionnaire_signataire_date_deliberation object_field="convention__gestionnaire_signataire_date_deliberation__"|add:convention_uuid %}
+                                        {% include "common/display_field_if_exists.html" with value=convention.gestionnaire_signataire_bloc_signature object_field="convention__gestionnaire_signataire_bloc_signature__"|add:convention_uuid %}
                                     </div>
                                 </div>
                             </div>
