--- a/templates/settings/edit_bailleur.html
+++ b/templates/settings/edit_bailleur.html
@@ -78,6 +78,9 @@
                                         </div>
                                     </div>
                                 </div>
+
+                                {% include "common/form/input_textarea.html" with form_input=form.signataire_bloc_signature object_field="bailleur__signataire_bloc_signature__"|add:form.uuid.value %}
+
                             </div>
                         </div>
                         {% include "common/required_fields_info.html" %}
