S767 Dashboard public via metabase (#539)
* Embed Metabase public dashboard in stats page

* Add title to the embedded iframe

--- a/templates/stats/index.html
+++ b/templates/stats/index.html
@@ -4,232 +4,12 @@
 
 {% block page_title %}Stats - APiLos{% endblock%}
 
-{% block javascript_extras %}
-    <script type="text/javascript" src="https://code.highcharts.com/highcharts.js" nonce="{{request.csp_nonce}}"></script>
-    <script type="text/javascript" src="https://code.highcharts.com/themes/high-contrast-light.js" nonce="{{request.csp_nonce}}"></script>
-{% endblock %}
-
-{% block css_extras %}
-    <link rel="stylesheet" href="https://code.highcharts.com/css/highcharts.css" nonce="{{request.csp_nonce}}">
-{% endblock %}
-
 {% block content %}
-    <div class="fr-container fr-py-5w">
-        <div class="background-alt-blue-france fr-px-1w fr-py-3w fr-mb-3w">
-            <h2 class="fr-pt-5w text-center">Impact du service APiLos</h2>
-            <div class="fr-text--bold border-bottom-default-grey">Indicateurs qui décrivent notre impact auprès de nos utilisateurs</div>
-            <div class="fr-grid-row fr-grid-row--gutters">
-                <div class="fr-col-12 fr-col-md-6">
-                    <div class="fr-my-3w fr-px-2w">
-                        <div class="background-white fr-p-2w">
-                            <div class="text-title-blue-france text-center"><span class="fr-h1 text-title-blue-france">{{ delay }} </span> jours</div>
-                            <p class="text-center fr-mb-1w">Temps moyen d’instruction d’une convention sur APiLos</p>
-                            <p class="fr-text--bold text-center text-success-main ">(vs. 83 jours précédemment)</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="fr-col-12 fr-col-md-6">
-                    <div class="fr-my-3w fr-px-2w">
-                        <div class="background-white fr-p-2w">
-                            <div class="text-title-blue-france text-center"><span class="fr-h1 text-title-blue-france">{{ nb_logements }} </span> logements</div>
-                            <p class="text-center">Couverts par le service depuis décembre 2021
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="background-alt-blue-france fr-px-1w fr-py-3w fr-mb-3w">
-            <h2 class="fr-pt-5w text-center">Suivi du déploiement national</h2>
-            <div class="fr-text--bold border-bottom-default-grey">Indicateurs qui nous permettent de piloter notre déploiement national</div>
-            <div class="fr-grid-row fr-grid-row--gutters">
-                <div class="fr-col-12 fr-col-md-4">
-                    <div class="fr-my-3w fr-pl-3w fr-pr-1w">
-                        <div class="background-white fr-p-2w">
-                            <div class="text-title-blue-france fr-h1 text-center fr-mb-1w">{{ conventions_count }}</div>
-                            <div class="text-title-blue-france fr-text--xl text-center fr-mb-1w">Conventions</div>
-                            <p class="text-center">Réalisées via APiLos</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="fr-col-12 fr-col-md-4">
-                    <div class="fr-my-3w fr-pl-3w fr-pr-1w">
-                        <div class="background-white fr-p-2w">
-                            <div class="text-title-blue-france fr-h1 text-center fr-mb-1w">{{ users_by_role.nb_bailleurs }}</div>
-                            <div class="text-title-blue-france fr-text--xl text-center fr-mb-1w">Bailleurs</div>
-                            <p class="text-center">Utilisateurs de la plateforme</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="fr-col-12 fr-col-md-4">
-                    <div class="fr-my-3w fr-pr-3w fr-pl-1w">
-                        <div class="background-white fr-p-2w">
-                            <div class="text-title-blue-france fr-h1 text-center fr-mb-1w">{{ users_by_role.nb_instructeurs }}</div>
-                            <div class="text-title-blue-france fr-text--xl text-center fr-mb-1w">Instructeurs</div>
-                            <p class="text-center">Utilisateurs de la plateforme</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="fr-col-12">
-                    <div class="fr-my-3w fr-px-3w">
-                        <div class="background-white fr-p-2w" id="conv_by_departement">
-                        </div>
-                    </div>
-                </div>
-                <script type="text/javascript" nonce="{{request.csp_nonce}}">
-                    document.addEventListener('DOMContentLoaded', function () {
-                        const chart = Highcharts.chart('conv_by_departement', {
-                            chart: {
-                                type: 'bar',
-                                height: 600
-                            },
-                            title: {
-                                text: 'Répartition des conventions sur APiLos par département et par statut'
-                            },
-                            xAxis: {
-                                allowDecimals: false,
-                                title: {
-                                    text: 'Départements'
-                                },
-                                categories: {{depts|safe}}
-                            },
-                            yAxis: {
-                                allowDecimals: false,
-                                min: 0,
-                                title: {
-                                    text: 'Conventions par département'
-                                },
-                                stackLabels: {
-                                    enabled: true,
-                                    style: {
-                                        fontWeight: 'bold'
-                                    }
-                                }
-                            },
-                            legend: {
-                                reversed: true
-                            },
-
-                            plotOptions: {
-                                series: {
-                                    stacking: 'normal',
-                                    dataLabels: {
-                                        enabled: true
-                                    }
-                                }
-                            },
-                            series: [{
-                                name: "Signée",
-                                data: {{ conv_bydept.Signée }}
-                            }, {
-                                name: "A signer",
-                                data: {{ conv_bydept.A_signer }}
-                            }, {
-                                name: "Corrections requises",
-                                data: {{ conv_bydept.Corrections_requises }}
-                            }, {
-                                name: "Instruction requise",
-                                data: {{ conv_bydept.Instruction_requise }}
-                            }, {
-                                name: 'Projet',
-                                data: {{ conv_bydept.Projet }}
-                            }]
-                        });
-                    });
-                </script>
-
-            </div>
-        </div>
-        <div class="background-alt-blue-france fr-px-1w fr-py-3w fr-mb-3w">
-            <h2 class="fr-pt-5w text-center">Chantier de simplification</h2>
-            <div class="fr-text--bold border-bottom-default-grey">Champs à cibler en priorité dans une démarche de simplification des conventions</div>
-            <div class="fr-col-12">
-                <div class="fr-my-3w fr-px-3w">
-                    <div class="background-white fr-p-2w" id="correct_by_field">
-                    </div>
-                </div>
-            </div>
-            <script type="text/javascript" nonce="{{request.csp_nonce}}">
-                document.addEventListener('DOMContentLoaded', function () {
-                    const chart = Highcharts.chart('correct_by_field', {
-                        chart: {
-                            type: 'bar',
-                            height: 600
-                        },
-                        title: {
-                            text: "Champs donnant lieu au plus d'échange entre les bailleurs et les instructeurs"
-                        },
-                        xAxis: {
-                            categories: {{comment_fields|safe}},
-                            title: {
-                                text: null
-                            },
-                        },
-                        yAxis: {
-                            min: 0,
-                            title: {
-                                text: null
-                            },
-                        },
-                        plotOptions: {
-                            bar: {
-                                dataLabels: {
-                                    enabled: true
-                                }
-                            }
-                        },
-                        series: [{
-                            name: 'nombre de commentaires',
-                            data: {{ comment_data }}
-                        }]
-                    });
-                });
-            </script>
-            <div class="fr-col-12">
-                <div class="fr-my-3w fr-px-3w">
-                    <div class="background-white fr-p-2w" id="null_fields">
-                    </div>
-                </div>
-            </div>
-            <script type="text/javascript" nonce="{{request.csp_nonce}}">
-                document.addEventListener('DOMContentLoaded', function () {
-                    const chart = Highcharts.chart('null_fields', {
-                        chart: {
-                            type: 'bar',
-                            height: 800,
-                            styledMode: true
-                        },
-                        colors: ['#8085e9'],
-                        title: {
-                            text: "Fréquence à laquelle les champs ci-dessous sont laissés vides par les bailleurs"
-                        },
-                        xAxis: {
-                            categories: {{null_fields_keys|safe}},
-                            title: {
-                                text: null
-                            },
-                        },
-                        yAxis: {
-                            min: 0,
-                            max:100,
-                            title: {
-                                text: null
-                            },
-                        },
-                        plotOptions: {
-                            bar: {
-                                dataLabels: {
-                                    enabled: true
-                                }
-                            }
-                        },
-                        series: [{
-                            name: 'Pourcentage des fois où le champ est vide',
-                            data: {{ null_fields_values }}
-                        }]
-                    });
-                });
-            </script>
-        </div>
-    </div>
+    <iframe src="https://metabase.apilos.beta.gouv.fr/public/dashboard/b91cd727-95e2-44c7-b8ae-0cf4a235abfb"
+        scrolling="yes"
+        frameborder="0"
+        width="100%"
+        height="1300"
+        title="Tableau de bord statistique - Metabase"
+    ></iframe>
 {% endblock %}
