--- a/templates/conventions/bailleur.html
+++ b/templates/conventions/bailleur.html
@@ -88,7 +88,9 @@
                             </div>
                         </div>
 
-                        {% include "common/form/input_textarea.html" with form_input=form.signataire_bloc_signature object_field="bailleur__signataire_bloc_signature__"|add:form.uuid.value %}
+                        <div class="fr-mb-2w">
+                            {% include "common/form/input_text.html" with form_input=form.signataire_bloc_signature object_field="bailleur__signataire_bloc_signature__"|add:form.uuid.value %}
+                        </div>
 
                         {% if convention.programme.is_foyer or convention.programme.is_residence %}
                             <h4>Gestionnaire des logments conventionnés</h4>
@@ -109,7 +111,9 @@
                                     </div>
                                 </div>
 
-                                {% include "common/form/input_textarea.html" with form_input=form.gestionnaire_signataire_bloc_signature object_field="convention__gestionnaire_signataire_bloc_signature__"|add:convention_uuid %}
+                                <div class="fr-mb-2w">
+                                    {% include "common/form/input_text.html" with form_input=form.gestionnaire_signataire_bloc_signature object_field="convention__gestionnaire_signataire_bloc_signature__"|add:convention_uuid %}
+                                </div>
 
                             {% endwith %}
                         {% endif %}
