--- a/templates/conventions/index.html
+++ b/templates/conventions/index.html
@@ -32,7 +32,7 @@
                                         {% endcomment %}
                                     </div>
                                 {% endif %}
-                                <div hidden>
+                                <div>
                                     <a class="fr-btn  fr-btn--secondary " href="{% url 'conventions:new_avenant_start' %}">
                                         <span class="fr-fi-add-line fr-mr-1w" aria-hidden="true"></span>Créer un avenant
                                     </a>
