--- a/templates/conventions/avenant/complete_form_for_avenants.html
+++ b/templates/conventions/avenant/complete_form_for_avenants.html
@@ -3,17 +3,26 @@
 <div>
     <p class="fr-alert__title">Valider l'avenant</p>
     <p class="fr-mb-0">
-        {% if not convention.programme.ville or not convention.lot.nb_logements or convention.parent.nom_fichier_signe %}
+        {{convention.uuid}} _ 
+        {{convention.parent.uuid}} - 
+        {{convention.parent.programme.ville}} - {{convention.parent.lot.nb_logements}} - {{convention.parent.nom_fichier_signe}}
+        {% if not convention.parent.programme.ville or not convention.parent.lot.nb_logements or not convention.parent.nom_fichier_signe %}
             Pour pouvoir valider cet avenant, vous devez remplir les informations suivantes.
-            {% if not convention.programme.ville %}
-                pas de ville
-            {% endif %}
-            {% if not convention.lot.nb_logements %}
-                - pas de logements
-            {% endif %}
-            {% if not convention.parent.nom_fichier_signe %}
+            <form method="post" action="">
+                {% csrf_token %}
+                {% if not convention.parent.programme.ville %}
+                    pas de ville
+                    {% include "common/form/input_text.html" with form_input=complete_for_avenant_form.ville editable=True %}
+                {% endif %}
+                {% if not convention.parent.lot.nb_logements %}
+                    - pas de logements
+                    {% include "common/form/input_number.html" with form_input=complete_for_avenant_form.nb_logements editable=True %}
+                {% endif %}
+                {% if not convention.parent.nom_fichier_signe %}
                 - pas de fichier
-            {% endif %}
+                {% endif %}
+                <button>Envoyer</button>
+            </form>
         {% else %}
             {% if convention.numero %}
                 <p class="fr-mb-0">L'avenant aura le numéro {{ convention.numero }}</p>
