--- a/templates/layout/header_no_cerbere.html
+++ b/templates/layout/header_no_cerbere.html
@@ -27,8 +27,8 @@
                     <a href="/" title="Accueil - APiLos">
                         <p class="fr-header__service-title">APiLos</p>
                     </a>
-                    <p class="fr-header__service-tagline">Le portail qui facilite l’accès aux logements sociaux par la simplification des conventions</p>
-                    <p class="fr-header__service-tagline fr-text--sm"><em>Un service du SIAP (Système d'Information des Aides à la Pierre)</em></p>
+                    <p class="fr-header__service-tagline">Votre conventionnement APL simplifié</p>
+                    <p class="fr-header__service-tagline fr-text--sm"><em>Un service du SIAP</em></p>
                 </div>
             </div>
             {% if not without_action_button %}
@@ -64,7 +64,7 @@
                         <ul class="fr-links-group fr-mb-1w">
                                 <li class="fr-mx-2w apilos-flex-wrap">
                                     <div class="width-100 apilos-d-block fr-m-auto">
-                                        <div class="fr-mb-1w">
+                                        <div>
                                             Bonjour&nbsp;
                                             <strong>{{ request.user }}</strong>
                                         </div>
