--- a/templates/common/FAQ_link.html
+++ b/templates/common/FAQ_link.html
@@ -1,8 +1,6 @@
 <a class="fr-p-1w fr-grid-row apilos-block-faqlink" href="//docs.apilos.beta.gouv.fr" target="_blank" rel="noopener">
-    <div class="fr-p-2w"><span class="fr-icon-question-mark" aria-hidden="true"></span></div>
+    <div class="fr-p-1w"><span class="fr-icon-question-mark apilos--icon-small" aria-hidden="true"></span></div>
     <div class="fr-p-1w">
         <div><strong>Vous avez besoin d'aide ?</strong></div>
-        <div class="fr-text--light">Retrouvez notre <strong><u>FAQ</u></strong>
-        </div>
     </div>
 </a>
